<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount_message">Bill Amount</string>
    <string name="bill_amount_hint">Please enter amount</string>
    <string name="round_checkbox_message">Round to nearest dollar</string>
    <string name="calc_button_message">Calculate</string>
    <string name="tip_result_message">Tip:</string>
    <string name="tip_result">$0.00</string>

</resources>
