
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp" >

    <TextView
        android:id="@+id/billAmountMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/bill_amount_message"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/billAmountInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/billAmountMessage"
        android:layout_alignBaseline="@+id/billAmountMessage"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/billAmountMessage"
        android:inputType="numberDecimal"
        android:hint="@string/bill_amount_hint" >
    
        <requestFocus/>
        
    </EditText>
    
    <CheckBox
        android:id="@+id/roundCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/billAmountMessage"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:text="@string/round_checkbox_message"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Button
        android:id="@+id/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/roundCheckBox"
        android:layout_marginTop="16dp"
        android:text="@string/calc_button_message"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/tipResultMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/calcButton"
        android:layout_marginTop="45dp"
        android:text="@string/tip_result_message"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/tipResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tipResultMessage"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/tipResultMessage"
        android:text="@string/tip_result"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>